--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
       <div class="container box-header">
         <!-- nav menu -->
         
-        <a class="logotype link" href="./index.html"
+        <a class="header-logo-link link" href="./index.html"
         ><span class="logo-color">web</span>studio</a>
 
         <nav class="page-nav">
@@ -279,11 +279,9 @@
 
     <!-- ======footer====== -->
     <footer class="footer">
-
-      <div class="general-footer container">
-         <!-- logo-footer-box -->
+      <div class="footer-box container">
         <div class="logo-box">
-          <a class="logotype link" href="./index.html" target="_blank"
+          <a class="footer-logo-link link" href="./index.html" target="_blank"
           ><span class="logo-color">web</span>studio</a>
           <p class="footer-text">
             Increase the flow of customers and sales for your business with digital
@@ -334,7 +332,7 @@
           <label for="subscribe" class="footer-form-label">
             <span class="footer-social-title subscribe-title">Subscribe</span>
           </label>
-          <span class="footer-form-email-wrapper">
+          <span class="footer-form-wrapper">
             <input type="email" id="subscribe" name="email" class="footer-form-input" required placeholder="E-mail">
             
             <button type="submit" class="footer-form-btn">
